feat: >=1024px adaptiveness

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./pages/index.css">
-  <title>Hello World</title>
+  <title>Dungeons and Dragons</title>
 </head>
 
 <body class="page">
@@ -18,10 +18,10 @@
         </div>
         <div class="nav__panel">
           <ul class="nav__list">
-            <li class="nav__item">Home</li>
-            <li class="nav__item">About</li>
-            <li class="nav__item">Photo</li>
-            <li class="nav__item">Contacts</li>
+            <li class="nav__item"><a class="nav__link" href="#">Home</a></li>
+            <li class="nav__item"><a class="nav__link" href="#">About</a></li>
+            <li class="nav__item"><a class="nav__link" href="#">Photo</a></li>
+            <li class="nav__item"><a class="nav__link" href="#">Contacts</a></li>
           </ul>
           <a href="tel:+3-141-592-65-35" class="nav__phone-number">+3-141-592-65-35</a>
         </div>
