feat: >=768px adaptiveness

--- a/index.html
+++ b/index.html
@@ -43,29 +43,34 @@
             <p class="about__txt">
               d&d – это мир фантазии и воображения, где мы все вместе стираем границы реальности, отправляясь на
               испытания,
-              на которые мы никогда бы не решились в реальной жизни. Мы переживаем за своих персонажей как за самих себя и
+              на которые мы никогда бы не решились в реальной жизни. Мы переживаем за своих персонажей как за самих себя
+              и
               испытываем настоящие эмоции, ведь происходящее в этом мире пропитано нашим безграничным воображением. Но
               самое
               главное, что играя в d&d, люди могут пообщаться, откинуть повседневные проблемы в сторону и просто весело
               провести время.
             </p>
+            <div class="about__pictures">
+              <img class="about__img" src="images/about/img1.jpg" alt="Фигуры настольной игры">
+              <img class="about__img" src="images/about/img2.jpg" alt="Игральные кости">
+            </div>
           </div>
           <div class="about__column">
             <h3 class="about__descr-title">Чем отличается от других настолок?</h3>
-            <p class="about__txt">От настольных игр d&d отличается очень сильно, в первую очередь это связано с
+            <p class="about__txt">
+              От настольных игр d&d отличается очень сильно, в первую очередь это связано с
               отсутствием
               ограничений: все будет происходить так как вы захотите. Хотите стать джедаем и побывать на Татуине –
               пожалуйста! Хотите постараться пережить зомби апокалипсис – легко! Но в любом из миров вас встретят
               трудности,
-              которые придется преодолеть, и сложные решения, которые кардинально повлияют на вашу дальнейшую жизнь (жизнь
-              вашего персонажа).</p>
+              которые придется преодолеть, и сложные решения, которые кардинально повлияют на вашу дальнейшую жизнь
+              (жизнь
+              вашего персонажа).
+            </p>
+            <div class="about__pictures">
+              <img class="about__img" src="images/about/img3.jpg" alt="Игровой процесс">
+            </div>
           </div>
-        </div>
-        <div class="about__pictures">
-          <img class="about__img" src="images/about/img1.jpg" alt="Фигуры настольной игры">
-          <img class="about__img" src="images/about/img2.jpg" alt="Игральные кости">
-          <img class="about__img" src="images/about/img3.jpg" alt="Игровой процесс">
-        </div>
       </section>
     </div>
   </main>
