feat: >=320px adaptiveness

--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
       <div class="footer__info">
         <p class="footer__date">©1974 the birth of d&d</p>
         <p class="footer__author">Game master & Илья Резинкин</p>
+        <a href="tel:+3-141-592-65-35" class="footer__phone-number">+3-141-592-65-35</a>
       </div>
     </div>
   </footer>
